fix styling, add active class

--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,6 @@
                 <div class="js-context"></div>
             </div>
         </div>
+        <span id="circle" class="circle"></span>
     </body>
 </html>
